--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
