--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.5",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1"
+    "react-native-reanimated": "~2.9.1",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
