--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
@@ -18,6 +20,8 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
   },
