--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
