--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "firebase": "9.8",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.5",
-    "expo-updates": "~0.14.5"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
